@@ -7,6 +7,16 @@ filterchain=org.apache.tools.ant.types.FilterChain
 filterreader=org.apache.tools.ant.types.AntFilterReader
 filterset=org.apache.tools.ant.types.FilterSet
 mapper=org.apache.tools.ant.types.Mapper
+# different filename mappers
+identitymapper=org.apache.tools.ant.util.IdentityMapper
+flattenmapper=org.apache.tools.ant.util.FlatFileNameMapper
+globmapper=org.apache.tools.ant.util.GlobPatternMapper
+mergemapper=org.apache.tools.ant.util.MergingMapper
+regexpmapper=org.apache.tools.ant.util.RegexpPatternMapper
+packagemapper=org.apache.tools.ant.util.PackageNameMapper
+unpackagemapper=org.apache.tools.ant.util.UnPackageNameMapper
+containermapper=org.apache.tools.ant.util.ContainerMapper
+
 path=org.apache.tools.ant.types.Path
 patternset=org.apache.tools.ant.types.PatternSet
 regexp=org.apache.tools.ant.types.RegularExpression
